# brainglobe-atlasapi

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SQUIRREL_MONKEY_TESTING_NOTES.md  Test structuretree.ipynb  environment.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  validate_atlas_script.py  validation.py
.github/workflows/: test_and_deploy.yml  update_atlas_name_hints.yml
atlas_gen/: __init__.py  git_script.py  mesh_utils.py  metadata_utils.py  run_all.py  stacks.py  structure_json_to_csv.py  structures.py  test_git.py  wrapup.py
atlas_gen/atlas_scripts/: allen_mouse.py  allen_mouse_atlas.py  allenbrain_atlas.py  example_atlas.py  example_mouse.py  example_mouse_atlas.py  fishatlas_atlas.py  fishatlas_utils.py  humanatlas.py  kim_unified_atlas.py  kim_unified_atlas_v2.py  mpin_zfish.py  mpin_zfish_atlas.py  ratatlas.py
atlas_scripts/: CArea_mouse.py  admba_3d_dev_mouse.py  african_molerat.py  allen_cord.py  allen_human.py  allen_mouse.py  allen_mouse_bluebrain_barrels.py  australian_mouse.py  azba_zfish.py  bma2.0_marmoset.py  bma_marmoset.py  carea_mouse.py  ccfv2_dev_mouse.py  ccfv2_fiber_mouse.py  ccfv2_mouse.py  ccfv2_mouse_fiber.py  ccfv3augmented_mouse.py  csl_cat.py  demba_allen_seg_dev_mouse.py  dorr_mouse_mri.py  drosophila_wingdisc_instar3.py  eurasian_blackcap.py  example_mouse.py  hutchinson_ferret.py  jrc2018u_neuropils_fly.py  kim_dev_mouse.py  kim_dev_mouse_group.py  kim_mouse.py  kim_mouse_20um.py  kim_mouse_isotropic.py  nadkarni_mri_mouselemur.py  nmt_arm_sym_macaque.py  nmt_charm_macaque.py  nmt_charm_sym_macaque.py  nmt_sarm_sym_macaque.py  osten_mouse.py  perens_lsfm_mouse.py  prairie_vole.py  princeton_female_rat.py  princeton_male_rat.py  (+13 more)
atlas_scripts/hashes/: csl_cat.txt
atlas_scripts/pre_packaging/blackcap/: blackcap_for_itksnap.py  combine_blackcap_magneto_and_anatomical_annotations.py  merge_with_lut.py
atlas_scripts/pre_packaging/drosophila/: filtering_wingdisc.py
atlas_scripts/pre_packaging/swc_female_rat/: README.md  apply_ants_transforms.sh  clean_annotation.py  prepare_template_and_annotation.py  run_ants_registration.sh
atlases_generation_scripts/: allenbrain_atlas.py
bg_atlasapi/: __init__.py  bg_atlas.py  cli.py  config.py  core.py  descriptors.py  list_atlases.py  structure_class.py  structure_tree_util.py  update.py  update_atlases.py  utils.py
bg_atlasgen/: __init__.py  main_script.py  mesh_utils.py  metadata_utils.py  run_all.py  stacks.py  structure_json_to_csv.py  structures.py  test_git.py  validate_atlases.py  volume_utils.py  wrapup.py
bg_atlasgen/atlas_scripts/: admba_3d_dev_mouse.py  allen_cord.py  allen_mouse.py  azba_zfish.py  example_mouse.py  humanatlas.py  kim_developmental_ccf_mouse.py  kim_mouse.py  kim_unified_atlas.py  mpin_zfish.py  osten_mouse.py  perens_lsfm_mouse.py  princeton_mouse.py  ratatlas.py  template_script.py  whs_sd_rat.py
brainatlas_api/: __init__.py  atlas_metadata.json  bg_atlas.py  config.py  core.py  descriptors.py  list_atlases.py  obj_utils.py  structure_class.py  structure_tree_util.py  update.py  utils.py
brainatlas_api/atlas_gen/: __init__.py  descriptors.py  mesh_utils.py  metadata_utils.py  stacks.py  structure_json_to_csv.py  structures.py  volume_utils.py  wrapup.py
brainatlas_api/atlas_gen/atlas_scripts/: fishatlas_atlas.py  humanatlas.py  kim_unified_atlas.py  ratatlas.py  test_atlas.py
brainatlas_api/atlas_scripts/: allenbrain_atlas.py  test_atlas.py
brainatlas_api/atlas_scripts/creation_utils/: __init__.py  metadata.py  structures.py
brainatlas_api/structures/: __init__.py  simple_tree.py  structure_tree.py
brainglobe/: atlas_metadata.json  core.py  file_io.py  utils.py
brainglobe_atlasapi/: __init__.py  atlas_name.py  atlas_repackage.py  bg_atlas.py  bg_atlas_allen.py  bg_atlas_legacy.py  bg_atlas_v2.py  bg_atlasv2.py  cli.py  config.py  core.py  descriptors.py  list_atlases.py  structure_class.py  structure_tree_util.py  update_atlases.py  utils.py
brainglobe_atlasapi/atlas_generation/: __init__.py  annotation_utils.py  atlas_packaging_data.py  main_script.py  mesh_utils.py  metadata_utils.py  stacks.py  structure_json_to_csv.py  structures.py  validate_atlases.py  volume_utils.py  wrapup.py
brainglobe_atlasapi/atlas_generation/atlas_scripts/: L3I_wingdisc.py  _combine_blackcap_annotations.py  _combine_blackcap_magneto_and_anatomical_annotations.py  _halve_blackcap_reference.py  admba_3d_dev_mouse.py  allen_bbp_ccfv3a_entire_mouse_brain.py  allen_cord.py  allen_human.py  allen_mouse.py  allen_mouse_bluebrain_barrels.py  australian_mouse.py  australian_mouse_brain.py  axolotl_atlas.py  azba_zfish.py  blackcap.py  catlas.py  cavefish_atlas.py  ccfv3augmented_mouse.py  columbia_cuttlefish.py  csl_cat.py  cuttlefish.py  humanatlas.py  (+31 more)
docs/atlases/: latest_version.json
docs/md/: summary.md
paper/: paper.bib  paper.md
scripts/: generate_atlas_name.sh
tests/: conftest.py  test_atlas.py  test_bg_atlas.py  test_cli.py  test_cly.py  test_config_file.py  test_core_atlas.py  test_list_atlases.py  test_simple_tree.py  test_structure_dict.py  test_structure_tree.py  test_update_atlas.py  test_utils.py
tests/assets/: structures.json
tests/atlasapi/: conftest.py  test_bg_atlas.py  test_bg_atlasv2.py  test_cli.py  test_config_file.py  test_core_atlas.py  test_list_atlases.py  test_recovery.py  test_structure_dict.py  test_structure_tree_util.py  test_update_atlas.py  test_utils.py  test_validation.py
tests/atlasgen/: conftest.py  labels051224.txt  test_annotation_utils.py  test_atlas_packaging_data.py  test_descriptors.py  test_mesh_utils.py  test_metadata_utils.py  test_stacks.py  test_structures.py  test_validation.py  test_wrapup.py  test_wrapup_overwrite.py  test_wrapup_unit.py
tests/test_unit/: test_validation.py
tools/: update_atlas_table.py
travis/: deploy_linux.sh  install_unix.sh  install_windows.sh  lint.sh  run_tests.sh  test.sh
tutorials/: Atlas API usage.ipynb
(+16 files in other folders)
